[package]
name = "learn_rust"
version = "0.1.0"
authors = ["Jason Lenoble <jason.lenoble@gmail.com>"]
edition = "2018"
description = "Sandbox for learning Rust"
license = "MIT"

[lib]
name = "learn_rust"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so only enable
# in debug mode.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.44"
features = ["console", "Window", "Document", "HtmlBodyElement"]
